<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
            
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/sign_in"
            android:visible="true" />
            
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out"
            android:visible="false" />
    </group>
    
    <group>
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_premium"
            android:title="@string/premium_nav_upgrade" />
            
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/baseline_volunteer_activism_24"
            android:title="@string/donate" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_deenshield_reports"
            android:title="@string/reports" />
            
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/faq" />
            
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/feedback" />
    </group>
</menu>
