<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_deenshield_notification"
        android:title="@string/notifications"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_deenshield_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faq"
        android:icon="@drawable/baseline_help_outline_24"
        android:title="@string/faq"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/feedback"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about"
        app:showAsAction="never" />
        
</menu>
