<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_required"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permissions_disclosure" />

    <com.alhaq.deenshield.permissions.PermissionItemView
        android:id="@+id/accessibility_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:permissionTitle="@string/accessibility_service" />

    <com.alhaq.deenshield.permissions.PermissionItemView
        android:id="@+id/device_admin_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:permissionTitle="@string/device_admin" />

    <com.alhaq.deenshield.permissions.PermissionItemView
        android:id="@+id/overlay_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:permissionTitle="@string/display_over_other_apps" />

    <com.alhaq.deenshield.permissions.PermissionItemView
        android:id="@+id/usage_stats_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:permissionTitle="@string/usage_stats" />

    <com.alhaq.deenshield.permissions.PermissionItemView
        android:id="@+id/notification_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:permissionTitle="@string/notifications" />

</LinearLayout>
